# ephemeral-sandbox-test

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: .gitignore  MIGRATION_CHECKLIST.md  README.md  pyproject.toml
benchmark/backend/benchmark_lab/: __init__.py  api.py  artifacts.py  catalog.py  cli.py  comparison.py  derivation.py  fixtures.py  gateway.py  metadata.py  models.py  observability.py  paths.py  phase1_baseline.py  planning.py  product.py  recovery.py  redaction.py  reports.py  resource_sampling.py  resources.py  runner.py  safety.py  service.py  sessions.py  statistics.py  transport.py
benchmark/defaults/: definition-catalog.json  gateway.yml  standard-local.yml
benchmark/defaults/workspace-profiles/: large.yml  medium.yml  small.yml
benchmark/docs/: phase-0-fixture-freeze.md  phase-1-python-foundation.md  phase-2-artifacts-reports.md  phase-3-product-boundary.md  phase-4-planning-quick-smoke.md
benchmark/fixtures/layerstack-phase1-v1/: README.md  manifest.json
benchmark/presets/: active-session.yml  concurrency-scaling.yml  file-metadata-blame.yml  layerstack-phase1-tiny-baseline.yml  payload-scaling.yml  publication.yml  quick-smoke.yml  release-comparison.yml  remount-width.yml  squash-only.yml  squash-remount.yml  workspace-size-count.yml
benchmark/tools/: generate_layerstack_phase1_corpus.py
benchmark/web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
benchmark/web/src/: App.tsx  AppProviders.tsx  main.tsx  (+3 more)
(+92421 files in other folders)
